# wynn-build-generator

./: Cargo.toml  LICENSE  README.md  index.html  rs_generator.py  style.css
src/: main.rs
src/best_build_calc/: mod.rs
src/best_build_search/: helper_enums.rs  mod.rs
src/items_dep/: mod.rs
src/utils/: fetchItems.js  fetchItems.ts
src/website/: atree_input.rs  autocomplete.rs  build_calc.rs  build_disp.rs  build_ordering.rs  build_reqs_input.rs  item_input_list.rs  mod.rs  weapon_input.rs
src/wynn_calcs/: mod.rs
src/wynn_data/: mod.rs
src/wynn_data/atree/: enums.rs  mod.rs  spells.rs
src/wynn_data/atree/archer/: atree_data.rs  mod.rs
src/wynn_data/atree/assassin/: atree_data.rs  mod.rs
src/wynn_data/atree/mage/: atree_data.rs  mod.rs
src/wynn_data/atree/shaman/: atree_data.rs  mod.rs
src/wynn_data/atree/warrior/: atree_data.rs  mod.rs
src/wynn_data/builder/: mod.rs
src/wynn_data/general/: enums.rs  macros.rs  mod.rs  plzdontlook.rs
src/wynn_data/items/: enums.rs  item_consts.rs  items_list.rs  mod.rs
src/wynn_data/sets/: enums.rs  mod.rs  set_bonus_data.rs
