[package]
name = "wynn-build-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.0"
wasm-bindgen = "0.2.83"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Window',
  'Event',
  'HtmlDocument',
  'DomRect'
]